# AE2

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  document.yml
doc/: CMakeLists.txt  Doxyfile.in
libs/: CMakeLists.txt
libs/ae2_convolve/: CMakeLists.txt
libs/ae2_convolve/include/: ae2_convolve.h  ae2_fft_convolve.h  ae2_karatsuba.h  ae2_zerolatency_fft_convolve.h
libs/ae2_convolve/src/: CMakeLists.txt  ae2_fft_convolve.c  ae2_karatsuba.c  ae2_zerolatency_fft_convolve.c
libs/ae2_delay/: CMakeLists.txt
libs/ae2_delay/include/: ae2_delay.h
libs/ae2_delay/src/: CMakeLists.txt  ae2_delay.c
libs/ae2_fft/: CMakeLists.txt
libs/ae2_fft/include/: ae2_fft.h
libs/ae2_fft/src/: CMakeLists.txt  ae2_fft.c
libs/ae2_iir_filter/: CMakeLists.txt
libs/ae2_iir_filter/include/: ae2_biquad_filter.h  ae2_iir_filter.h
libs/ae2_iir_filter/src/: CMakeLists.txt  ae2_biquad_filter.c  ae2_iir_filter.c
libs/ae2_ring_buffer/: CMakeLists.txt
libs/ae2_ring_buffer/include/: ae2_ring_buffer.h
libs/ae2_ring_buffer/src/: CMakeLists.txt  ae2_ring_buffer.c
libs/ae2_simple_hrtf/: CMakeLists.txt
libs/ae2_simple_hrtf/include/: ae2_simple_hrtf.h
libs/ae2_simple_hrtf/src/: CMakeLists.txt  ae2_simple_hrtf.c
libs/ae2_window_function/: CMakeLists.txt
libs/ae2_window_function/include/: ae2_window_function.h
libs/ae2_window_function/src/: CMakeLists.txt  ae2_window_function.c
plugins/: make_new_plugin.py
plugins/00Template/: CMakeLists.txt
plugins/00Template/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
plugins/00_template/: CMakeLists.txt
plugins/00_template/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/01_simple_convolver/: CMakeLists.txt
plugins/01_simple_convolver/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/02_distortion/: CMakeLists.txt
plugins/02_distortion/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/03_spectrum_analyzer/: CMakeLists.txt
plugins/03_spectrum_analyzer/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/04_nbands_equalizer/: CMakeLists.txt
plugins/04_nbands_equalizer/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/AE2Distortion/: CMakeLists.txt
plugins/AE2Distortion/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
plugins/AE2NBandsEqualizer/: CMakeLists.txt
plugins/AE2Pannner/: CMakeLists.txt
plugins/AE2Pannner/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/AE2SimpleConvolver/: CMakeLists.txt
plugins/AE2SimpleConvolver/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
plugins/AE2SpectrumAnalyzer/src/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
test/: CMakeLists.txt
test/ae2_convolve/: CMakeLists.txt  ae2_convolve_test.cpp  ae2_fft_convolve_test.cpp  ae2_karatsuba_test.cpp  ae2_zerolatency_fft_convolve_test.cpp
test/ae2_delay/: CMakeLists.txt  main.cpp
test/ae2_fft/: CMakeLists.txt  main.cpp
test/ae2_iir_filter/: CMakeLists.txt  ae2_biquad_filter_test.cpp  ae2_iir_filter_test.cpp
test/ae2_ring_buffer/: CMakeLists.txt  main.cpp
test/ae2_simple_hrtf/: CMakeLists.txt  main.cpp
test/ae2_window_function/: CMakeLists.txt  main.cpp
